Creating Product View and Controller

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Sistema de Cotações</title>
 </head>
 <body>
 	<h1>Seja bem vindo ao Sistema de Cotações!</h1>
+	
 </body>
 </html>
