--- a/WebContent/teste.html
+++ b/WebContent/teste.html
@@ -1,8 +1,14 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-    <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %> 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<!--================================================================================
+	Item Name: Materialize - Material Design Admin Template
+	Version: 2.2
+	Author: GeeksLabs
+	Author URL: http://www.themeforest.net/user/geekslabs
+================================================================================ -->
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
@@ -38,11 +44,7 @@
   
 </head>
 
-
-
-<body class="blue lighten-5">
-  <c:import url="header.jsp" />
-  <br><br>
+<body class="cyan">
   <!-- Start Page Loading -->
   <div id="loader-wrapper">
       <div id="loader"></div>        
@@ -50,22 +52,29 @@
       <div class="loader-section section-right"></div>
   </div>
   <!-- End Page Loading -->
-  
-  <br>
+
+
+
   <div id="login-page" class="row">
-    <div class="col s4 offset-s4 z-depth-4 card-panel">
-      <form class="login-form" action="Login" method="POST">
-         <div class="row margin">
+    <div class="col s12 z-depth-4 card-panel">
+      <form class="login-form">
+        <div class="row">
+          <div class="input-field col s12 center">
+            <img src="images/login-logo.png" alt="" class="circle responsive-img valign profile-image-login">
+            <p class="center login-form-text">Material Design Admin Template</p>
+          </div>
+        </div>
+        <div class="row margin">
           <div class="input-field col s12">
             <i class="mdi-social-person-outline prefix"></i>
-            <input id="username" type="text" name="login">
+            <input id="username" type="text">
             <label for="username" class="center-align">Username</label>
           </div>
         </div>
         <div class="row margin">
           <div class="input-field col s12">
             <i class="mdi-action-lock-outline prefix"></i>
-            <input id="password" type="password" name="password">
+            <input id="password" type="password">
             <label for="password">Password</label>
           </div>
         </div>
@@ -77,17 +86,15 @@
         </div>
         <div class="row">
           <div class="input-field col s12">
-            
-            <button class="btn waves-effect waves-light col s12  deep-orange darken-1" type="submit" name="action">Login</button>
-            
+            <a href="index.html" class="btn waves-effect waves-light col s12">Login</a>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s6 m6 l6">
-            <p class="margin medium-small"><a href="/SisCot/IncludeProviderView.jsp">Register Now!</a></p>
+            <p class="margin medium-small"><a href="page-register.html">Register Now!</a></p>
           </div>
           <div class="input-field col s6 m6 l6">
-              <p class="margin right-align medium-small "><a href="page-forgot-password.html">Forgot password ?</a></p>
+              <p class="margin right-align medium-small"><a href="page-forgot-password.html">Forgot password ?</a></p>
           </div>          
         </div>
 
@@ -112,7 +119,7 @@
 
   <!--plugins.js - Some Specific JS codes for Plugin Settings-->
   <script type="text/javascript" src="js/plugins.js"></script>
-  
-  
+
 </body>
+
 </html>
